Atualização dos casos de teste